# waii-integration

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: semantic_context_add.py
src/: waii_context_manager.py
src/keboola/waii-integration/: keboola_metadata_collector.py  waii_context_manager.py
src/keboola/waii_integration/: models.py  semantic_context_add.py  waii_context_manager.py
src/keboola/waii_integration/keboola_utils/: client.py  component_descriptions.py  keboola_client.py  keboola_component_descriptions.py  keboola_models.py  metadata_collector.py  models.py
src/keboola/waii_integration/waii_utils/: waii_context_manager.py
src/keboola_utils/: keboola_client.py  keboola_component_descriptions.py
